--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,18 @@
 @import "reset.css";
-@import "screens/status-bar.css";
 @import "variable.css";
+
+/* components*/
 @import "components/component.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
+
+/*screem*/
+@import "screens/screen.css";
+@import "screens/status-bar.css";
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 1000vh;
 }
