kakao practice css

--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,16 +1,25 @@
 .screen-header {
   display: flex;
-  margin-top: 50px;
+  margin-top: 35px;
+  margin-bottom: 16px;
   justify-content: space-between;
   align-items: center;
 }
 
 .screen-header__title {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
   padding-left: var(--horizon-space);
 }
 
 .screen-header__icon span {
   margin: 10px;
+}
+
+.screen-header__icon span:last-child {
+  margin-right: 20px;
+}
+
+.screen-header__alarm {
+  position: relative;
 }
