--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -4,6 +4,12 @@
   align-items: center;
 }
 
+.user-component {
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
 .user-component__avatar {
   height: 70px;
   width: 70px;
@@ -18,8 +24,8 @@
 }
 
 .user-component__avatar-xl {
-  height: 80px;
-  width: 80px;
+  height: 73px;
+  width: 73px;
 }
 
 .user-component__title {
@@ -29,8 +35,36 @@
 
 .user-component__subtitle {
   color: rgba(0, 0, 0, 0.6);
+  font-size: 15px;
+  display: flex;
+  align-items: center;
 }
 
-.friend-screen {
-  margin-left: var(--horizon-space);
+.user-component__title--not-bold {
+  font-weight: 500;
+}
+
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 6px;
+}
+
+.user-component__caution-icon {
+  color: tomato;
+  border: 1.7px solid tomato;
+  border-radius: 50%;
+  margin-left: 5px;
+  font-size: 13px;
+  width: 14px;
+  height: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
