--- a/css/variable.css
+++ b/css/variable.css
@@ -1,4 +1,6 @@
 :root {
   --yello: #fae100;
   --horizon-space: 15px;
+  --border-line: 1px solid rgba(0, 0, 0, 0.2);
+  --grey: rgba(0, 0, 0, 0.4);
 }
