--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import "components/badge.css";
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
+@import "components/only-mobile.css";
 
 /*screem*/
 @import "screens/friends.css";
