--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -16,10 +16,47 @@
 .nav__btn {
   list-style: none;
   position: relative;
+  transform: translateY(50px);
+  animation: nav-icon-appear 0.2s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.nav__btn:last-child {
+  animation-delay: 1s;
+}
+
+@keyframes nav-icon-appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes newmessagealarm {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-10px) rotatey(360deg);
+  }
+  100% {
+    transform: none;
+  }
 }
 
 .nav__notification {
   position: absolute;
+  animation: newmessagealarm 3s ease-in-out infinite;
 }
 
 .nav__alarm {
