--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -9,7 +9,7 @@
 }
 
 .chat__timestamp {
-  margin-top: 95px;
+  margin-top: 120px;
   background-color: #92a4b2;
   padding: 5px 15px;
   border-radius: 24px;
@@ -20,6 +20,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadein 1s ease-in-out;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .message-receive-row {
@@ -69,7 +80,7 @@
   background-color: #fae100;
 }
 
-.reply-input {
+.reply {
   background-color: white;
   bottom: 0;
   position: fixed;
@@ -79,6 +90,11 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
+}
+
+.reply:focus-within {
+  transform: translateY(60px);
 }
 
 .reply__column {
@@ -89,6 +105,7 @@
 .reply__column:first-child {
   font-size: 25px;
   opacity: 0.5;
+  width: 10%;
 }
 
 .reply__column:last-child {
@@ -102,8 +119,9 @@
   height: 30px;
   outline: none;
   border: var(--border-line);
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: white;
   padding: 0px 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply__column:last-child > i,
@@ -123,4 +141,15 @@
   background-color: var(--yello);
   font-weight: 300;
   border: none;
+}
+
+.reply:focus-within i,
+.reply:focus-within button {
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.reply:focus-within input {
+  width: 100vw;
+  transform: translateX(-5%) scaleX(1.1) translateY(-60px);
 }
