--- a/css/screens/find-icons.css
+++ b/css/screens/find-icons.css
@@ -94,3 +94,23 @@
 .openchat__heart-count span {
   margin-left: 3px;
 }
+
+.openchat__heart-count:hover i {
+  will-change: transform;
+  animation: heartbeat 1s linear infinite;
+}
+
+@keyframes heartbeat {
+  0% {
+    color: white;
+  }
+
+  50% {
+    transform: scale(1.3);
+    color: tomato;
+  }
+
+  100% {
+    color: white;
+  }
+}
